OpenWeather API Calls and Tool-tip Marker Updates.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         type="text/css">
     <!-- Local Stylesheet: Style -->
-    <link rel="stylesheet" href="gStyle.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
     <title>135 Cities in 33 Countries</title>
 </head>
 
@@ -92,6 +92,6 @@
     defer></script> -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
     defer></script>
-<script src="gStyle.js" defer></script>
+<script src="assets/scripts/maps.js" defer></script>
 
 </html>
