Modals update dynamically. Cleanup.

--- a/test/gTest.html
+++ b/test/gTest.html
@@ -88,7 +88,7 @@
         </div>
     </div>
     <aside class="modal card" id="add-modal">
-        <div class="modal__content">
+        <div class="modal__content" id="modal-content">
             <p>Modal Content Here!</p>
         </div>
         <div class="modal__actions">
