Moved Google Map Nav  Control to a separate .js.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
     defer></script>
 
+<!-- Google Maps Navigation Controls JS Script -->
+<script src="assets/scripts/mapControls.js" defer></script>
 <!-- Main JS Script -->
 <script src="assets/scripts/maps.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
