--- a/test/gTest.html
+++ b/test/gTest.html
@@ -124,7 +124,8 @@
     defer></script> -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
     defer></script>
-
+<!-- Google Maps Navigation Controls JS Script -->
+<script src="gMaps.js" defer></script>
 <!-- Main JS Script -->
 <script src="gStyle.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
