Favicons. Styling. Verbose Logging.

--- a/test/gTest.html
+++ b/test/gTest.html
@@ -18,6 +18,10 @@
             emailjs.init("user_Dhpon4lpXiEEQEGFYwVco");
         })();
     </script>
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
 </head>
 
 <body>
@@ -119,6 +123,7 @@
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.js"></script>
 </body>
+
 <!-- Load Google Map API and local maps.js here to ensure it loads after everything else. -->
 <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC63AOgIhSH-DxdfryU-v6kmGh04RbLjc0&callback=initMap" async
     defer></script> -->
