Test: CSS Modal for Footer Links. onClick instead of addEventListener.

--- a/test/gTest.html
+++ b/test/gTest.html
@@ -50,32 +50,136 @@
 
         <!-- Fixed Footer Elements for Footer Modals -->
         <div class="footer  fixed-footer">
-            <a href="#">
+            <a href="#id01">
                 <i class="fa fa-exclamation" id="fa-exclamation" aria-hidden="true"></i>
                 <span class="sr-only">About</span>
             </a>
 
-            <a href="#">
+            <a href="#id02">
                 <i class="fa fa-file-code-o" id="fa-file-code-o" aria-hidden="true"></i>
                 <span class="sr-only">API's</span>
             </a>
 
-            <a href="#">
+            <a href="#id03">
                 <i class="fa fa-code" id="fa-code" aria-hidden="true"></i>
                 <span class="sr-only">Code Snippets</span>
             </a>
 
-            <a href="#">
+            <a href="#id04">
                 <i class="fa fa-envelope-o" id="fa-envelope-o" aria-hidden="true"></i>
                 <span class="sr-only">Contact Form</span>
             </a>
 
-            <a href="#">
+            <a href="#id05">
                 <i class="fa fa-user" id="fa-user" aria-hidden="true"></i>
-                <span class="sr-only">My Resumé</span>
+                <span class="sr-only">Naoise Olof Seán Gaffney</span>
             </a>
         </div>
     </div>
+
+    <section>
+        <div id="id01" class="cssmodal">
+            <div class="cssmodal-dialog">
+                <div class="cssmodal-content">
+                    <header class="cssmodal-container">
+                        <a href="#" class="closebtn">×</a>
+                        <h3><i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
+                            <span class="sr-only">About</span>About</h3>
+                    </header>
+                    <div class="cssmodal-container">
+                        <p>The purpose of this course is to equip the learner with the knowledge, skill and
+                            competence to identify training and development needs at an organisation and or
+                            individual level, to devise a training plan and to explore the scope of training and
+                            development design to meet those needs.</p>
+                        <p>This course is hands-on and concentrates on the pragmatic aspects of training,
+                            ensuring trainers perform successfully in their role after this course.</p><br>
+                        <p><a href="https://calendar.google.com/calendar?cid=YW5qbzNxaHJiMWZlZ2Q2NnFjZjIxaXBubThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" target="_blank"><i class="fa fa-calendar" aria-hidden="true"></i>Course Dates & Time.</a></p>
+                        <p><a href="https://www.google.ie/maps/dir//6+Old+Court+Close,+Ballycullen,+Dublin+24,+Ireland/@53.2743642,-6.3531917,16z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48670b256a47fabf:0x8b35e55d6a01ad4e!2m2!1d-6.3488143!2d53.2743643!3e0" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i>Location: GaffCo Consulting.</a></p>
+                        <p><a href="#" class="button">Book Now!</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="id02" class="cssmodal">
+            <div class="cssmodal-dialog">
+                <div class="cssmodal-content">
+                    <header class="cssmodal-container">
+                        <a href="#" class="closebtn">×</a>
+                        <h3><i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i>
+                            <span class="sr-only">API's</span>Application Programming Interfaces</h3>
+                    </header>
+                    <div class="cssmodal-container">
+                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api1"></i></span><span><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank">Google Maps JavaScript API Description - to create the map and markers.</a></span></div>
+                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api2"></i></span><span><a href="https://openweathermap.org/api/one-call-api" target="_blank">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></span></div>
+                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api3"></i></span><span><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank">D3 API Description - to display dynamic graphs and statistics.</a></span></div>
+                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api4"></i></span><span><a href="https://www.emailjs.com/" target="_blank">EmailJS API Description - to enjoy user feedback to improve the website.</a></span></div>
+                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api5"></i></span><span><a href="https://firebase.google.com/" target="_blank">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></span></div>
+                        <p><a href="#" class="button">Book Now!</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="id03" class="cssmodal">
+            <div class="cssmodal-dialog">
+                <div class="cssmodal-content">
+                    <header class="cssmodal-container">
+                        <a href="#" class="closebtn">×</a>
+                        <h3><i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
+                            <span class="sr-only">Code Snippets</span>Code Snippets</h3>
+                    </header>
+                    <div class="cssmodal-container">
+                        <div><span><i class="fa fa-code" id="fa-code-code1"></i></span><span><a href="https://codeinstitute.net/" target="_blank">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></span></div>
+                        <div><span><i class="fa fa-code" id="fa-code-code2"></i></span><span><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank">Google Maps API - Bill Traversy @ Traversy Media.</a></span></div>
+                        <div><span><i class="fa fa-code" id="fa-code-code3"></i></span><span><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></span></div>
+                        <div><span><i class="fa fa-code" id="fa-code-code4"></i></span><span><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank">Udemy Course on D3 & Firebase by Shaun Pelling.</a></span></div>
+                        <div><span><i class="fa fa-code" id="fa-code-code5"></i></span><span><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></span></div>
+                        <p><a href="#" class="button">Book Now!</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="id04" class="cssmodal">
+            <div class="cssmodal-dialog">
+                <div class="cssmodal-content">
+                    <header class="cssmodal-container">
+                        <a href="#" class="closebtn">×</a>
+                        <h3><i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
+                            <span class="sr-only">Contact Form</span>Contact Form</h3>
+                    </header>
+                    <div class="cssmodal-container">
+                        <div class="center-form">
+                            <h4>Please get in touch!</h4>
+                            <form onsubmit="return sendMail(this);">
+                                <div><input type="text" name="name" class="form-control" id="fullname" placeholder="Name" required />
+                                    <div>
+                                        <div><input type="text" name="emailaddress" class="form-control" id="emailaddress" placeholder="Email: name@domain.com" required /></div>
+                                        <span><textarea rows="3" cols="35" name="feedback" class="form-control" id="feedback" placeholder="Your comments and thoughts." required></textarea></span>
+                                        <div><button type="submit" value="send" class="button" id="contactsubmit">Send Feedback</button></div>
+                                    </div>
+                                </div>
+                            </form>
+                            <p><a href="#" class="button">Book Now!</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="id05" class="cssmodal">
+            <div class="cssmodal-dialog">
+                <div class="cssmodal-content">
+                    <header class="cssmodal-container">
+                        <a href="#" class="closebtn">×</a>
+                        <h3>TrainIT (Corporate Train the Trainer)</h3>
+                    </header>
+                    <div class="cssmodal-container">
+                        <p><a href="https://www.google.ie/maps/dir//6+Old+Court+Close,+Ballycullen,+Dublin+24,+Ireland/@53.2743642,-6.3531917,16z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48670b256a47fabf:0x8b35e55d6a01ad4e!2m2!1d-6.3488143!2d53.2743643!3e0" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i>Location: GaffCo Consulting.</a></p>
+                        <p><a href="#" class="button">Book Now!</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
 
     <!-- Modal controlled by JavaScript for Map Marker and Footer Modals -->
     <aside class="modal card" id="add-modal">
@@ -83,7 +187,7 @@
             <p>Modal Content Here!</p>
         </div>
         <div class="modal__actions">
-            <button class="button" id="close">Close</button>
+            <button class="button" id="close" onclick="closeModal()">Close</button>
         </div>
     </aside>
 
