--- a/test/gTest.html
+++ b/test/gTest.html
@@ -40,10 +40,11 @@
             </div>
             <div class="controls fullscreen-control">
                 <button title="Toggle Fullscreen">
-                    <div class="fullscreen-control-icon fullscreen-control-top-left"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-top-right"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-bottom-left"></div>
-                    <div class="fullscreen-control-icon fullscreen-control-bottom-right"></div>
+                    <!--Changed Google Map Code <div></div> to <span></span> to comply with HTML standards. Works.-->
+                    <span class="fullscreen-control-icon fullscreen-control-top-left"></span>
+                    <span class="fullscreen-control-icon fullscreen-control-top-right"></span>
+                    <span class="fullscreen-control-icon fullscreen-control-bottom-left"></span>
+                    <span class="fullscreen-control-icon fullscreen-control-bottom-right"></span>
                 </button>
             </div>
         </div>
