Test: added linear background effect to make it look appealing. Added CSS and JS to modify the Google Map Marker background. Google Maps forces styling via JS that can only be overriden by JS.

--- a/test/gTest.html
+++ b/test/gTest.html
@@ -45,6 +45,10 @@
                     <span class="fullscreen-control-icon fullscreen-control-top-right"></span>
                     <span class="fullscreen-control-icon fullscreen-control-bottom-left"></span>
                     <span class="fullscreen-control-icon fullscreen-control-bottom-right"></span>
+                    <!-- <div class="fullscreen-control-icon fullscreen-control-top-left"></div>
+                    <div class="fullscreen-control-icon fullscreen-control-top-right"></div>
+                    <div class="fullscreen-control-icon fullscreen-control-bottom-left"></div>
+                    <div class="fullscreen-control-icon fullscreen-control-bottom-right"></div> -->
                 </button>
             </div>
         </div>
