New Test Directory Structure. Better aligned to Production. Includes Code Snippets (Dev before Test and Production).

--- a/test/Code Snippets/FireStoreTest.html
+++ b/test/Code Snippets/FireStoreTest.html
@@ -41,6 +41,6 @@
 </body>
 
 <!-- Fiebase Firestore JS Script Test -->
-<script src="FireStoreTest.js"></script>
+<script src="/test/Code Snippets/FireStoreTest.js"></script>
 
 </html>
