--- a/test/Code Snippets/fetchEUStats.html
+++ b/test/Code Snippets/fetchEUStats.html
@@ -8,5 +8,5 @@
 <body>
     
 </body>
-<script src="fetchEUStats.js"></script>
+<script src="/test/Code Snippets/fetchEUStats.js"></script>
 </html>
