--- a/test/Code Snippets/geoLocTest.html
+++ b/test/Code Snippets/geoLocTest.html
@@ -8,5 +8,5 @@
 <body>
     <div id="geoloc"></div>
 </body>
-<script src="/test/geoLocTest.js"></script>
+<script src="/test/Code Snippets/geoLocTest.js"></script>
 </html>
