--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -9,7 +9,7 @@
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         type="text/css">
     <!-- Local Stylesheet: Style -->
-    <link rel="stylesheet" href="gStyle.css">
+    <link rel="stylesheet" href="/test/CSS/gStyle.css">
     <title>Cities in Countries Data</title>
 
     <!-- Favicon, a gorgeous 'G' for Gaff/Gaffney/Google... -->
@@ -207,7 +207,7 @@
 </script>
 
 <!-- EmailJS sendmail() -->
-<script src="sendemail.js"></script>
+<script src="/test/JavaScript/sendemail.js"></script>
 
 <!-- Google Firebase Firestore noSQL DB -->
 <!-- The core Firebase JS SDK is always required and must be listed first -->
@@ -243,10 +243,10 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBDKoKXKgFfLTb9SNLk0QEq1FmnNJD3hSg&callback=initMap" async
     defer></script>
 <!-- Google Maps Navigation Controls JS Script -->
-<script src="gMaps.js" defer></script>
+<script src="/test/JavaScript/gMaps.js" defer></script>
 <!-- Main JS Script -->
-<script src="gStyle.js" defer></script>
+<script src="/test/JavaScript/gStyle.js" defer></script>
 <!-- D3 JS Script for Stats/Graphs -->
-<script src="d3Stats.js"></script>
+<script src="/test/JavaScript/d3Stats.js"></script>
 
 </html>
