--- a/test/HTML/gTest.html
+++ b/test/HTML/gTest.html
@@ -87,20 +87,18 @@
             <div class="cssmodal-dialog">
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
-                        <a href="#" class="closebtn">×</a>
+                        <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
                             <span class="sr-only">About</span>About</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <p>The purpose of this course is to equip the learner with the knowledge, skill and
-                            competence to identify training and development needs at an organisation and or
-                            individual level, to devise a training plan and to explore the scope of training and
-                            development design to meet those needs.</p>
-                        <p>This course is hands-on and concentrates on the pragmatic aspects of training,
-                            ensuring trainers perform successfully in their role after this course.</p><br>
-                        <p><a href="https://calendar.google.com/calendar?cid=YW5qbzNxaHJiMWZlZ2Q2NnFjZjIxaXBubThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" target="_blank"><i class="fa fa-calendar" aria-hidden="true"></i>Course Dates & Time.</a></p>
-                        <p><a href="https://www.google.ie/maps/dir//6+Old+Court+Close,+Ballycullen,+Dublin+24,+Ireland/@53.2743642,-6.3531917,16z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48670b256a47fabf:0x8b35e55d6a01ad4e!2m2!1d-6.3488143!2d53.2743643!3e0" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i>Location: GaffCo Consulting.</a></p>
-                        <p><a href="#" class="button">Book Now!</a></p>
+                        <!-- <div><img src="/assets/images/MarkerTTModal.png" width="200"></div> -->
+                        <div><p>Please hover over the Google Map Markers - <img src="/assets/images/GoogleMapMarker.png" width="10" alt="Google Map Marker"> - for information on the Capital City of your choice.</p>
+                        <p>Click on the Overview button for Country details, and click on the Statistics button for simple statistics.</p><p>The Footer links are About - <i class="fa fa-exclamation" id="fa-exclamation-css-modal" aria-hidden="true"></i>
+                        <span class="sr-only">About</span> - which is this modal, API's - <i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i><span class="sr-only">API's</span> - providing links to the descriptions of the API's used on this website to provide data and functionality, Code Snippets - <i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
+                        <span class="sr-only">Code Snippets</span> - providing links to tutorials and courses with knowledge and skills used on this website, Contact Form - <i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
+                        <span class="sr-only">Contact Form</span> - to provide much needed feedback (greatly appreciated), and Contact - <i class="fa fa-location-arrow" aria-hidden="true"></i> - in case you want to get in touch!</p></div>
+                        <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
             </div>
@@ -109,17 +107,18 @@
             <div class="cssmodal-dialog">
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
-                        <a href="#" class="closebtn">×</a>
+                        <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-file-code-o" id="fa-file-code-o-css-modal" aria-hidden="true"></i>
                             <span class="sr-only">API's</span>Application Programming Interfaces</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api1"></i></span><span><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank">Google Maps JavaScript API Description - to create the map and markers.</a></span></div>
-                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api2"></i></span><span><a href="https://openweathermap.org/api/one-call-api" target="_blank">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></span></div>
-                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api3"></i></span><span><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank">D3 API Description - to display dynamic graphs and statistics.</a></span></div>
-                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api4"></i></span><span><a href="https://www.emailjs.com/" target="_blank">EmailJS API Description - to enjoy user feedback to improve the website.</a></span></div>
-                        <div><span><i class="fa fa-file-code-o" id="fa-file-code-o-api5"></i></span><span><a href="https://firebase.google.com/" target="_blank">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></span></div>
-                        <p><a href="#" class="button">Book Now!</a></p>
+                        <div><a href="https://developers.google.com/maps/documentation/javascript/tutorial" target="_blank">Google Maps JavaScript API Description - to create the map and markers.</a></div>
+                        <div><a href="https://openweathermap.org/api/one-call-api" target="_blank">OpenWeather API Description - adding real-time weather information to the marker tool-tips.</a></div>
+                        <div><a href="https://github.com/d3/d3/blob/master/API.md" target="_blank">D3 API Description - to display dynamic graphs and statistics.</a></div>
+                        <div><a href="https://www.emailjs.com/" target="_blank">EmailJS API Description - to enjoy user feedback to improve the website.</a></div>
+                        <div><a href="https://firebase.google.com/" target="_blank">"Built with Firebase &reg;" - to store and retrieve D3 and City data.</a></div>
+                        <div><a href="https://restcountries.eu/" target="_blank">REST Countries EU API Description - Global Country data to populate the Overview and Statistics Modals.</a></div>
+                        <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
             </div>
@@ -128,17 +127,17 @@
             <div class="cssmodal-dialog">
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
-                        <a href="#" class="closebtn">×</a>
+                        <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-code" id="fa-code-css-modal" aria-hidden="true"></i>
                             <span class="sr-only">Code Snippets</span>Code Snippets</h3>
                     </header>
                     <div class="cssmodal-container">
-                        <div><span><i class="fa fa-code" id="fa-code-code1"></i></span><span><a href="https://codeinstitute.net/" target="_blank">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></span></div>
-                        <div><span><i class="fa fa-code" id="fa-code-code2"></i></span><span><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank">Google Maps API - Bill Traversy @ Traversy Media.</a></span></div>
-                        <div><span><i class="fa fa-code" id="fa-code-code3"></i></span><span><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></span></div>
-                        <div><span><i class="fa fa-code" id="fa-code-code4"></i></span><span><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank">Udemy Course on D3 & Firebase by Shaun Pelling.</a></span></div>
-                        <div><span><i class="fa fa-code" id="fa-code-code5"></i></span><span><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></span></div>
-                        <p><a href="#" class="button">Book Now!</a></p>
+                        <div><a href="https://codeinstitute.net/" target="_blank">Google Maps API - Code Institute walkthrough by Matt Rudge.</a></div>
+                        <div><a href="https://youtu.be/Zxf1mnP5zcw" target="_blank">Google Maps API - Bill Traversy @ Traversy Media.</a></div>
+                        <div><a href="https://youtu.be/GXrDEA3SIOQ" target="_blank">OpenWeather API - OpenWeather API JavaScript example and walkthrough by Shanjah Raj.</a></div>
+                        <div><a href="https://www.udemy.com/course/build-data-uis-with-d3-firebase/" target="_blank">Udemy Course on D3 & Firebase by Shaun Pelling.</a></div>
+                        <div><a href="https://www.udemy.com/course-dashboard-redirect/?course_id=2508942" target="_blank">Udemy Course on JavaScript the Complete Guide 2020 by Maximilian Schwarzmüller.</a></div>
+                        <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
             </div>
@@ -147,7 +146,7 @@
             <div class="cssmodal-dialog">
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
-                        <a href="#" class="closebtn">×</a>
+                        <!-- <a href="#" class="closebtn">×</a> -->
                         <h3><i class="fa fa-envelope-o" id="fa-envelope-o-css-modal" aria-hidden="true"></i>
                             <span class="sr-only">Contact Form</span>Contact Form</h3>
                     </header>
@@ -163,7 +162,7 @@
                                     </div>
                                 </div>
                             </form>
-                            <p><a href="#" class="button">Book Now!</a></p>
+                            <p style="text-align:right"><a href="#" class="button">Close</a></p>
                         </div>
                     </div>
                 </div>
@@ -173,12 +172,12 @@
             <div class="cssmodal-dialog">
                 <div class="cssmodal-content">
                     <header class="cssmodal-container">
-                        <a href="#" class="closebtn">×</a>
-                        <h3>TrainIT (Corporate Train the Trainer)</h3>
+                        <!-- <a href="#" class="closebtn">×</a> -->
+                        <h4>TrainIT (Corporate Train the Trainer)</h4>
                     </header>
                     <div class="cssmodal-container">
                         <p><a href="https://www.google.ie/maps/dir//6+Old+Court+Close,+Ballycullen,+Dublin+24,+Ireland/@53.2743642,-6.3531917,16z/data=!4m9!4m8!1m0!1m5!1m1!1s0x48670b256a47fabf:0x8b35e55d6a01ad4e!2m2!1d-6.3488143!2d53.2743643!3e0" target="_blank"><i class="fa fa-location-arrow" aria-hidden="true"></i>Location: GaffCo Consulting.</a></p>
-                        <p><a href="#" class="button">Book Now!</a></p>
+                        <p style="text-align:right"><a href="#" class="button">Close</a></p>
                     </div>
                 </div>
             </div>
